--- a/gmaps-scraper-system/package.json
+++ b/gmaps-scraper-system/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "lucide-react": "^0.552.0",
     "next": "^14.2.33",
@@ -44,12 +45,12 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.6"
   }
 }
